"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-02-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-32:
	  prsim command: unknown-inputs-fanout
	  like 'unknown-input' but filters out nodes with no fanout.
	  Documented and tested.


2008-01-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-31:
	  prsim: bug fix: 
		strong pulls turning off should not be unstable if
		there is already a weak pull in the same direction on.
		Assign cause to the active weak rule.  
		Technically, rule *is* unstable...
	  Added test case: prsim/SRAM-d-02


2008-01-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-30:
	  prsim: CRITICAL bug fix(es):
		when pull-off yields to opposite rule, 
			set event's weak flag as necessary.
		when overwriting event in-queue, also update weak-flag
			WITH THE RULE THAT IS ACTUALLY ON, and not the
			one that turned off.  
	  prsim diagnostic enhancements:
		report instabilities on dequeued/overtaken events,
			except user-set.
		Many test cases updated with improved feedback.
	  NUMEROUS test cases added to prsim/ to cover many corners.  


2008-01-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-29:
	  prsim: major bug fix:
		shutting off of strong rules should yield to weak rules
		pulling in opposite direction, overtake in queue.
	  New test cases: prsim/weak-yield-*


	* HACKT-00-01-04-main-00-82-02-ACT-03-28:
	  prsim: critical bug fix (suitable for trunk!)
		dequeue *weak* unstable events now checks if a pending X
		node should be left in queue based on the new pull state
		and possible change of node value.  (3 line patch)
	  Test cases added for strong and weak rules alike.  


	* HACKT-00-01-04-main-00-82-02-ACT-03-27: