@@ -5,6 +5,12 @@
 
 2008-02-05	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-82-02-ACT-03-33:
+	  prsim command: status-newline, like status but prints each
+		node on its own line for readability.
+	  Documented and tested.
+
+
 	* HACKT-00-01-04-main-00-82-02-ACT-03-32:
 	  prsim command: unknown-inputs-fanout
 	  like 'unknown-input' but filters out nodes with no fanout.
